// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CTabContent customize 1`] = `
<div>
  <div
    class="tab-content bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CTabContent component 1`] = `
<div>
  <div
    class="tab-content"
  >
    Test
  </div>
</div>
`;
